--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-        "staffrole": 123, 
-        "premiumeroleid": 123,
-        "guildid": 123,
-        "categoryid": 123
+        "staffrole": 1330526753751302215, 
+        "premiumeroleid": 1332109448147111988,
+        "guildid": 1330525578008330392,
+        "categoryid": 1332121326600720458
 }
