--- a/config.json
+++ b/config.json
@@ -3,4 +3,5 @@
         "premiumeroleid": 1332109448147111988,
         "guildid": 1330525578008330392,
         "categoryid": 1332121326600720458
+        "bot.token": MTMzMjEyNTc0OTU5NTA3ODc0NQ.GI0kGs.wsP59k5htcxMBCE7zZ_kUU0zhdhfIiQrlH-Jzo
 }
